<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SLS Group</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="internet_not_available">Please check your internet</string>
    <string name="userNameHint">User Name</string>
    <string name="userIdHint">User Id</string>
    <string name="signInBtnText">Sign In</string>
    <string name="passwordHint">Password</string>
    <string name="enter_user_name">Please Enter User Id</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="give_permission_text">Please allow permission in Settings</string>
    <string name="title">SLS Group</string>
    <string name="customer">My Customers</string>
    <string name="order">Inventory</string>
    <string name="leave">My Leaves</string>
    <string name="expense">My Expenses</string>
    <string name="select_your_branch">Select your Branch</string>
    <string name="punch_off">Punch Off</string>
    <string name="userid">User Id</string>
    <string name="password">Password</string>
    <string name="search_cust">Search Customer</string>
    <string name="priceinMT">price MT</string>
    <string name="priceinPcs">price pcs</string>
    <string name="qtyMT">qty MT</string>
    <string name="priceMetricTon">₹ MT</string>
    <string name="pricepcs">₹ pcs</string>
    <string name="unitinpieces">pcs</string>
    <string name="inputQty">quantity</string>
    <string name="Travel">Travel</string>
    <string name="punchedInSuccess">punched in successfully</string>
    <string name="pleasePunchInText">Please Punch In</string>
    <string name="nav_dashboard">DashBoard</string>
    <string name="nav_my_customers">My Customers</string>
    <string name="nav_my_orders">Inventory</string>
    <string name="nav_my_leaves">My Leaves</string>
    <string name="nav_my_expenses">My Expenses</string>
    <string name="other">Others</string>
    <string name="nav_punch_in">Punch In</string>
    <string name="nav_punch_out">Punch Out</string>
    <string name="no_customer_found">No Customer Found</string>
    <string name="mt">MT</string>
    <string name="pcs">PCS</string>
    <string name="customer_name">Customer Name</string>
    <string name="item_total">Item Total</string>
    <string name="sub_total">Sub Total</string>
    <string name="remarks">Staff Remarks</string>
    <string name="total">Total</string>
    <string name="sgst_12">Sgst 12%</string>
    <string name="cgst_12">Cgst 12%</string>
    <string name="fors">FOR</string>
    <string name="total_discount">Discount</string>
    <string name="pl">PL ( + )</string>
    <string name="pl_minus">PL ( - )</string>
    <string name="save_draft">Save As Draft</string>
    <string name="save_online">Save Online</string>
    <string name="cancel_text">Cancel</string>
    <string name="delete">Delete</string>
    <string name="sr_no">Sr No.</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="price">Price</string>
    <string name="total_calculation">Total Calculation</string>
    <string name="save_draft_text">Save into Draft</string>
    <string name="add_text">Add</string>
    <string name="add_quantity">Add Quantity</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="no_information_text">No Information available</string>
    <string name="add_text_one_by_four" tools:ignore="TypographyFractions">1/5</string>
    <string name="add_text_two_by_four">2/5</string>
    <string name="add_text_three_by_four" tools:ignore="TypographyFractions">3/5</string>
    <string name="add_text_four_by_four">4/5</string>
    <string name="add_text_five_by_four">5/5</string>
    <string name="add_text_six_by_four">6/6</string>
    <string name="next_text">Next</string>
    <string name="tin_number_text">TIN Number</string>
    <string name="pan_number_text">PAN Number</string>
    <string name="gst_number_text">GST Number</string>
    <string name="back_text">Back</string>
    <string name="office_address_text">Office Address line 1</string>
    <string name="delivery_address_text">Delivery Address line 1</string>
    <string name="mobile_number_text">Mobile Number</string>
    <string name="land_line_number_text">Landline Number</string>
    <string name="email_text">Email</string>
    <string name="fax_number_text">Fax  Number</string>
    <string name="contact_person_text">Contact Person</string>
    <string name="contact_person_des_text">Contact Person Designation</string>
    <string name="delivery_address_text_two">Delivery Address line 2</string>
    <string name="office_address_text_two">Office Address line 2</string>
    <string name="leave_from_date_text">Leave From Date</string>
    <string name="leave_till_date_text">Leave Till Date</string>
    <string name="apply_text">Apply</string>
    <string name="claim_title_text">New Claim Title</string>
    <string name="start_from_date_text">Start From Date</string>
    <string name="select_from_date_text">From Date</string>
    <string name="select_to_date_text">To Date</string>
    <string name="start_location">From Location</string>
    <string name="end_location">To Location</string>
    <string name="amount_text">Bill Amount</string>
    <string name="select_date_text">Select Date</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="add_expense">Add Expense</string>
    <string name="apply_leave_text">Submitted Leave Application</string>
    <string name="add_details_text">Add Details</string>
    <string name="select_date_from_text">Please Select From Date</string>
    <string name="select_date_to_text">Please Select To Date</string>
    <string name="select_remarks_text">Enter Some Remarks</string>
    <string name="customer_phone_no">Customer Phone Number</string>
    <string name="customer_email">Customer Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="credit_limit">Credit Limit</string>
    <string name="credit_days">Credit Days</string>
    <string name="nature_of_bussiness">Nature Of Business</string>
    <string name="start_date_business">Start Date Of Business</string>
    <string name="submit_text">Submit</string>
    <string name="annual_turn_over">Annual Turnover</string>
    <string name="referred_by_text">Referred By</string>
    <string name="manage_customer">Manage Customer</string>
    <string name="approve_customer">Approve Customer</string>
    <string name="serach_text">Search…</string>
    <string name="add_customer_text">Add Customer</string>
    <string name="address_text">Address</string>
    <string name="target_text">Targets</string>
    <string name="target_customer">Target Customer</string>
    <string name="documents_text">Documents</string>
    <string name="select_customer_text">Please Select Any Customer</string>
    <string name="total_amount">Total Amount:</string>
    <string name="select_quantity">Please Enter Valid Quantity</string>
    <string name="rate_per_piece">Rate per piece</string>
    <string name="available_in_stock">Available in stock</string>
    <string name="rate_per_mt">Rate per MT</string>
    <string name="rupees">₹</string>
    <string name="kgs">MT</string>
    <string name="pcs_text">pcs</string>
    <string name="order_ref_number">Order Ref Number</string>
    <string name="employee_name">Employee Name</string>
    <string name="total_amount_text">Total Amount</string>
    <string name="status">Status</string>
    <string name="order_submitted_for_approval">Waiting For Approval</string>
    <string name="manager_approved">Manager Approved</string>
    <string name="accounts_approved">Accounts Approved</string>
    <string name="order_closed">Order Closed</string>
    <string name="manager_rejected">Manager Rejected</string>
    <string name="accounts_rejected">Accounts Rejected</string>
    <string name="ordered_quantity_mt_not_available">Ordered Quantity in MT is not available</string>
    <string name="ordered_quantity_pcs_not_available">Ordered Quantity in PCS is not available</string>
    <string name="token_varification_failed">Token Verification Failed.</string>
    <string name="search_text">Search</string>
    <string name="no_expense_available_text">Expense Not Available</string>
    <string name="create_claim_expense_text">Create Claim Expense</string>
    <string name="remarks_text">Remarks</string>
    <string name="add_expense_title">Please Enter Expense Title</string>
    <string name="add_expense_type">Please Select Expense Type</string>
    <string name="allow_storage_permission">Please allow Storage Permission to access this feature</string>
    <string name="camera_not_support">Your device does not support Camera</string>
    <string name="expense_title">Expense Title</string>
    <string name="submitted_date">Submitted Date</string>
    <string name="manager_remarks">Manager Remarks</string>
    <string name="expense_added_successfully">Expense Added Successfully</string>
    <string name="browse_text" tools:ignore="TypographyEllipsis">Browse...</string>
    <string name="order_details">Order Details</string>
    <string name="expense_details">Expense Details</string>
    <string name="close_text">Close</string>
    <string name="amount_text_">Amount</string>
    <string name="order_date">Order Date</string>
    <string name="total_tax_amount">Total Tax Amount</string>
    <string name="staff_remarks">Employee Remarks</string>
    <string name="uom">UOM</string>
    <string name="tax">Tax</string>
    <string name="discount">Discount</string>
    <string name="pl_plus">PL+</string>
    <string name="staff_remarks_text">Staff Remarks</string>
    <string name="expense_type">Expense Type</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="from_location">From Location</string>
    <string name="to_location">To Location</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="staff_name">Staff Name</string>
    <string name="expense_created">Expense Created</string>
    <string name="leave_created">Leave Created</string>
    <string name="approved">Approved</string>
    <string name="needs_modification">Needs Modification</string>
    <string name="rejected">Rejected</string>
    <string name="submit_for_approval_text">Submit For Approval</string>
    <string name="leave_status">Leave Status</string>
    <string name="leave_type">Leave Type</string>
    <string name="leave_count">Leave Count</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="contact_person">Contact Person</string>
    <string name="customer_created">Customer Created</string>
    <string name="customer_details">Customer Details</string>
    <string name="save_text">Save</string>
    <string name="contact_person_email">Contact Person Email</string>
    <string name="logOut">Log Out</string>
    <string name="nav_sales_tracker">Daily Activities Report</string>
    <string name="tab_One">Tab One</string>
    <string name="tab_Two">Tab Two</string>
    <string name="additional_details">Additional Details</string>
    <string name="sales_person">Sales Person</string>
    <string name="date_text">Date:</string>
    <string name="sales_target_monthly">Sales Target- Monthly</string>
    <string name="till_date_sales">Till Date Sales</string>
    <string name="todays_sale">Today\'s Sales</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="place_visited">Places Visited</string>
    <string name="result">Result</string>
    <string name="mode_of_communication">Mode</string>
    <string name="purpose">Purpose</string>
</resources>