<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="1dp"
        android:background="@color/colorPrimaryDark"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/mode_of_communication"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@color/colorWhite"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/place_visited"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@color/colorWhite"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/customer_name"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@color/colorWhite"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/purpose"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@color/colorWhite"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/result"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvNoResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_information_text" />

    </RelativeLayout>

</LinearLayout>