<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtGetDate"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:drawableEnd="@drawable/ic_date_range_gray_24dp"
        android:drawablePadding="5dp"
        android:drawableRight="@drawable/ic_date_range_gray_24dp"
        android:focusable="false"
        android:gravity="center"
        android:focusableInTouchMode="false"
        android:inputType="date"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/llUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edtGetDate"
        android:background="@color/colorGrayBg"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/customer_name"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order_ref_number"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/employee_name"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/total_amount_text"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/status"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llUp"
        android:visibility="gone" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="50dp"
        app:backgroundTint="@color/colorFabAccent"
        android:src="@drawable/ic_add_white_24dp"
        app:fabSize="normal" />

    <TextView
        android:id="@+id/tvNoResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llUp"
        android:gravity="center"
        android:text="@string/no_information_text" />
</RelativeLayout>
