<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:id="@+id/edtCreditLimit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/rupee_indian"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/rupee_indian"
            android:hint="@string/credit_limit"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtCreditDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawableEnd="@drawable/ic_date_range_gray_24dp"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/ic_date_range_gray_24dp"
            android:hint="@string/credit_days"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtPanNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawableEnd="@drawable/ic_format_list_numbered_gray_24dp"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/ic_format_list_numbered_gray_24dp"
            android:hint="@string/pan_number_text"
            android:inputType="text"
            android:maxLength="10"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edtTinNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawableEnd="@drawable/ic_format_list_numbered_gray_24dp"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/ic_format_list_numbered_gray_24dp"
            android:hint="@string/tin_number_text"
            android:inputType="text"
            android:maxLength="9"
            android:padding="10dp"
            android:visibility="gone"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/edtGstNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:drawableEnd="@drawable/ic_format_list_numbered_gray_24dp"
            android:drawablePadding="5dp"
            android:drawableRight="@drawable/ic_format_list_numbered_gray_24dp"
            android:hint="@string/gst_number_text"
            android:inputType="text"
            android:maxLength="15"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="TextFields" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorPrimary"
                android:text="@string/back_text"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:background="@color/colorPrimary"
                android:text="@string/next_text"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
    </LinearLayout>


</ScrollView>


